--- a/index.html
+++ b/index.html
@@ -2,9 +2,246 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Italian Food</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=0.9">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@700&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Carattere&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="first-part">
+    <div class="first-header">
+        <ul>
+            <li><a href="">HOME</a></li>
+            <li><a href="">MENU</a></li>
+            <li><a href="about-us-page/about-us.html">ABOUT US</a></li>
+            <li><a href="custom_page/custom-page.html">CUSTOM</a></li>
+            <li>
+                <div id="input_container">
+                    <input type="text" id="input" value>
+                    <img src="images/Search@1X.png" id="input_img">
+                </div>
+            </li>
+        </ul>
+    </div>
+
+    <div class="first-left-content">
+        <div>
+            <img src="images/Place%20Your%20Logo%20Here%20(Double%20Click%20to%20Edit)@1X.png" alt=""><br><br>
+            <h2 id="food">Italian Food</h2><br><br>
+            <h3>LOREMIPSUM DOLOR</h3><br><br><br><br>
+            <a href="#">READ MORE</a><br><br><br>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's
+                standard dummy text ever since the.</p>
+        </div>
+    </div>
+    <div class="first-right-content">
+        <img src="images/right-side@1X.png" alt="">
+    </div>
+</div>
+
+<div class="second-part">
+    <div class="second-header">
+        <div>
+            <h2 id="second_title">Lorem Ipsum Dolor</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum
+                vestibulum.</p>
+        </div>
+
+    </div>
+
+    <div class="second-content">
+        <div class="meal-card">
+            <img src="images/meal1.png" alt="">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet,
+                consectetur adipisicing...
+            </p>
+        </div>
+        <div class="meal-card">
+            <img src="images/meal2.png" alt="">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet,
+                consectetur adipisicing...
+            </p>
+        </div>
+        <div class="meal-card">
+            <img src="images/meal3.png" alt="">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet,
+                consectetur adipisicing...
+            </p>
+        </div>
+    </div>
+    <div class="second-footer">
+        <a href="#">SHOW MORE</a>
+    </div>
+
+</div>
+
+<div class="third-part">
+    <div class="third-header">
+        <h2 id="third_title">Lorem Ipsum Dolor</h2>
+    </div>
+    <div class="third-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+            do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex quia voluptas sit aspernatur
+        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+            do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex quia voluptas sit aspernatur
+        </p>
+    </div>
+    <div class="third-footer">
+        <a href="">MORE INFO</a>
+    </div>
+
+
+</div>
+
+<div class="fourth-part">
+    <div class="fourth-part-img">
+        <img src="images/meal4.png" alt="">
+    </div>
+    <div class="fourth-part-text">
+        <h2>
+            Discount up to
+            50% All Excursions
+        </h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing eli t,
+            sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+        </p>
+        <div class="fourth-part-footer">
+            <a href="#">READ MORE</a>
+        </div>
+    </div>
+    <div class="fourth-part-text">
+        <h2>
+            January’s Promo:
+            Buy 1 Get 1 Free!
+        </h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing eli t,
+            sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+        </p>
+        <div class="fourth-part-footer">
+            <a href="#">READ MORE</a>
+        </div>
+    </div>
+    <div class="fourth-part-img">
+        <img src="images/meal5.png" alt="">
+    </div>
+
+</div>
+
+<div>
+
+</div>
+<div>
+    <div class='gray-background grid'>
+
+        <h1> Lorem Ipsum Dolor Sit Amet</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            uo id quia natus facilis reiciendis excepturi quis</p>
+        <img class='pizza' alt='img of pizza' src='images/big-pizza.png' style="display: flex; justify-content: center">
+        <img class='pizza-slice' alt='img of pizza slice' src='images/pizza-slice.png'>
+    </div>
+    <div class='white-background grid'>
+        <div class='txt1'>
+            <h1>Lorem Ipsum</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur voluptate vitae neque consectetur
+                enim quod.</p>
+        </div>
+        <div class='txt2'>
+            <h1>Lorem Ipsum</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur voluptate vitae neque consectetur
+                enim quod.</p>
+        </div>
+        <div class='txt3'>
+            <h1>Lorem Ipsum</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur voluptate vitae neque consectetur
+                enim quod.</p>
+        </div>
+
+        <div class="bottom-text">
+            <p id='bp'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero ipsam quasi obcaecati, cum
+                possimus illum a sunt sed labore </p>
+            <p id='bbp'>Lorem Ipsum</p>
+        </div>
+    </div>
+    <!----------------Last page---------------------->
+
+
+    <div class='black-background grid'>
+
+
+        <h1>Title Here</h1>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quas ab voluptatem debitis, illo ex quisquam
+            fugia</p>
+
+        <div class='input-form'>
+            <form class='flex2'>
+                <input type='text' name='email' placeholder="Your Email">
+                <input type='submit' value='SUBSCRIBE'>
+            </form>
+        </div>
+    </div>
+    <!--------img leaf left-------->
+
+    <div class='footer grid'>
+        <div class='first-txt'>
+            <h2>Title Here</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id rerum, pariatur veritatis asperiores
+                cupiditate perferendis fugiat suscipit esse accusamus est similiqu.</p>
+            <div class='logos img-flex'>
+                <a href=''><img src='images/instagram.png' alt='Instagram'></a>
+                <a href=''><img src='images/facebook.png' alt='Facebook'></a>
+                <a href=''><img src='images/twitter.png' alt='Twiter'></a>
+                <a href=''><img src='images/whatsapp.png' alt='WhatsApp'></a>
+            </div>
+        </div>
+        <div class='second-txt'>
+            <h2>About</h2>
+            <p>History</p>
+            <p>Our Team</p>
+            <p>Brand Guidlines</p>
+            <p>Terms and Conditions</p>
+            <p>Privacy Policy</p>
+        </div>
+
+        <div class='third-txt'>
+            <h2>Services</h2>
+            <p>How to Order</p>
+            <p>Our Products</p>
+            <p>Order Status</p>
+            <p>Promo</p>
+            <p>Payment Method</p>
+        </div>
+        <div class='fourth-txt'>
+            <h2>Other</h2>
+            <p>Contact Us</p>
+            <p>Help</p>
+            <p>Privacy</p>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
