--- a/custom_page/custom-page.html
+++ b/custom_page/custom-page.html
@@ -32,27 +32,27 @@
         <div class='cp-body grid'>
             <h1>CUSTOMER REVIEWS</h1>
             <div class='review1 flex'> 
-                <img src='/custom_page/cp-img/food1.jpg' alt='food image'>
+                <img src='../custom_page/cp-img/food1.jpg' alt='food image'>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error dignissimos aspernatur quasi, amet deleniti voluptatum animi! Doloribus,Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error dignissimos aspernatur quasi, amet deleniti voluptatum animi! Doloribus, sapiente in inventore possimus officiis, labore hic vitae similique sit magni a.</p>
             </div>
             <div class='review2 flex'> 
-                <img src='/custom_page/cp-img/food1.jpg' alt='food image'>
+                <img src='../custom_page/cp-img/food1.jpg' alt='food image'>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error dignissimos aspernatur quasi, amet deleniti voluptatum animi! Doloribus, Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error dignissimos aspernatur quasi, amet deleniti voluptatum animi! Doloribus,sapiente in inventore possimus officiis, labore hic vitae similique sit magni a.</p>
             </div>
             <div class='review3 flex'> 
-                <img src='/custom_page/cp-img/food1.jpg' alt='food image'>
+                <img src='../custom_page/cp-img/food1.jpg' alt='food image'>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error dignissimos aspernatur quasi, amet deleniti voluptatum animi! Doloribus,Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error dignissimos aspernatur quasi, amet deleniti voluptatum animi! Doloribus, sapiente in inventore possimus officiis, labore hic vitae similique sit magni a.</p>
             </div>
             <div class='review4 flex'> 
-                <img src='/custom_page/cp-img/food1.jpg' alt='food image'>
+                <img src='../custom_page/cp-img/food1.jpg' alt='food image'>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error dignissimos aspernatur quasi, amet deleniti voluptatum animi! Doloribus, Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error dignissimos aspernatur quasi, amet deleniti voluptatum animi! Doloribus,sapiente in inventore possimus officiis, labore hic vitae similique sit magni a.</p>
             </div>
             <div class='review5 flex'> 
-                <img src='/custom_page/cp-img/food1.jpg' alt='food image'>
+                <img src='../custom_page/cp-img/food1.jpg' alt='food image'>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error dignissimos aspernatur quasi, amet deleniti voluptatum animi! Doloribus, Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error dignissimos aspernatur quasi, amet deleniti voluptatum animi! Doloribus,sapiente in inventore possimus officiis, labore hic vitae similique sit magni a.</p>
             </div>
             <div class='review6 flex'> 
-                <img src='/custom_page/cp-img/food1.jpg' alt='food image'>
+                <img src='../custom_page/cp-img/food1.jpg' alt='food image'>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error dignissimos aspernatur quasi, amet deleniti voluptatum animi! Doloribus,Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error dignissimos aspernatur quasi, amet deleniti voluptatum animi! Doloribus, sapiente in inventore possimus officiis, labore hic vitae similique sit magni a.</p>
             </div>
 
