--- a/about-us-page/about-us.html
+++ b/about-us-page/about-us.html
@@ -11,9 +11,9 @@
     <div class='header grid'>
         <nav class='navigation'>
             <ol>
-                <li class='navig'><a href=''>Home</a></li>
-                <li class='navig'><a href=''>Food reviews</a></li>
-                <li class='navig'><a href=''>About us</a></li>
+                <li class='navig'><a href='../index.html'>Home</a></li>
+                <li class='navig'><a href='../custom_page/custom-page.html'>Food reviews</a></li>
+                <li class='navig'><a href='about-us.html'>About us</a></li>
                 <li class='navig'><a href=''>Contact us</a><li>               
             </ol>
             <div class='s-box'>                        
