--- a/custom_page/custom-page.html
+++ b/custom_page/custom-page.html
@@ -13,9 +13,9 @@
         <div class='header grid'>
             <nav class='navigation'>
                 <ol>
-                    <li class='navig'><a href=''>Home</a></li>
-                    <li class='navig'><a href=''>Food reviews</a></li>
-                    <li class='navig'><a href=''>About us</a></li>
+                    <li class='navig'><a href='../index.html'>Home</a></li>
+                    <li class='navig'><a href='custom-page.html'>Food reviews</a></li>
+                    <li class='navig'><a href='../about-us-page/about-us.html'>About us</a></li>
                     <li class='navig'><a href=''>Contact us</a><li>               
                 </ol>
                 <div class='s-box'>                        
